Completed homework for week 1.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -4,22 +4,32 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element.  -->
-
-    <!-- Inside the header, add an <h1> element containing your name -->
-
+    <header>
+        <!-- Inside the header, add an <h1> element containing your name -->
+        <h1>Nick Zahnow</h1>
+    </header>
     <!-- Include an image -->
-
+    <div class="content">
+        <img src="images/masahiro-miyagi-r1wiw9CWg7I-unsplash.jpg"></img>
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+        <h2>Fun Facts</h2>
+        <ul>
+            <li>I've lived in Fargo since 2009.</li>
+            <li>☕️ I love coffee! ☕️</li>
+            <li>In my free time I like to make music and play video games.</li>
+        </ul>
+    </div>
     <!-- Create a footer element. -->
-
+    <footer>
+        <p>"The Dude abides." - Jeffrey Lebowski </p>
+    </footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
